docs/api/graphql/v1/operations/mutations/update-environment.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: update-environment
title: updateEnvironment
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};




<Badge class="badge badge--secondary badge--primary" text="form schema"/>



Update an environment's mutable fields (name, description, tags).




```graphql
updateEnvironment(
  organizationId: ID!
  id: ID!
  input: UpdateEnvironmentInput!
): EnvironmentPayload
```





### Form Schema

This mutation supports dynamic form generation using JSON Schema.

- [JSON Schema](https://api.massdriver.cloud/graphql/v1/inputs/updateEnvironment.json)
- [UI Schema](https://api.massdriver.cloud/graphql/v1/inputs/updateEnvironment.ui.json)

<SchemaForm
  schemaUrl="https://api.massdriver.cloud/graphql/v1/inputs/updateEnvironment.json"
  uiSchemaUrl="https://api.massdriver.cloud/graphql/v1/inputs/updateEnvironment.ui.json"
  name="updateEnvironment"
/>

### Arguments

#### [<code style={{ fontWeight: 'normal' }}>updateEnvironment.<b>organizationId</b></code>](#organization-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#organization-id\} 
Your organization's unique identifier.


#### [<code style={{ fontWeight: 'normal' }}>updateEnvironment.<b>id</b></code>](#id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#id\} 
The identifier of the environment to update.


#### [<code style={{ fontWeight: 'normal' }}>updateEnvironment.<b>input</b></code>](#input)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>UpdateEnvironmentInput!</b></code>](/api/graphql/v1/types/inputs/update-environment-input.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="input"/> \{#input\} 
Update an existing environment's name and description. The ID cannot be changed after creation.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>EnvironmentPayload</b></code>](/api/graphql/v1/types/objects/environment-payload.mdx) <Badge class="badge badge--secondary " text="object"/>